fix: Adjusted the size of the .slide-image. It was too large based on the original design

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,8 @@ figcaption {
 }
 
 .slide-image {
-  width: 300px;
-  height: 300px;
+  width: 250px;
+  height: 250px;
   border-radius: 0.25rem;
   aspect-ratio: 1/1;
 }
